[package]
name = "findreplace"
version = "0.1.0"
edition = "2021"
authors = ["Abhishek Kumar <akbittu@gmail.com>"]
license = "MIT"
description = "A tool to find and replace given pattern with substitute inside file."
readme = "README.md"
homepage = "https://github.com/isurfer21/FindReplace"
repository = "https://github.com/isurfer21/FindReplace.git"
keywords = ["cli", "find", "replace", "file", "pattern", "substitute", "json", "yaml", "cson"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
